--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^5.1.3",
     "html-react-parser": "^1.4.12",
     "jquery": "^3.6.0",
+    "node-sass": "^7.0.1",
     "popper": "^1.0.1",
     "react": "^18.0.0",
     "react-bootstrap": "^2.3.0",
