--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.8.3",
     "html-react-parser": "^1.4.12",
     "jquery": "^3.6.0",
     "node-sass": "^7.0.1",
@@ -21,6 +22,8 @@
     "react-bootstrap": "^2.3.0",
     "react-collapse": "^5.1.1",
     "react-dom": "^18.0.0",
+    "react-icons": "^4.3.1",
+    "react-read-more-read-less": "^1.0.7",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
