--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "my-portal",
   "version": "0.1.0",
   "private": true,
+"homepage": "https://blanketspy99.github.io/",
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
@@ -14,6 +15,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.3",
+    "gh-pages": "^4.0.0",
     "html-react-parser": "^1.4.12",
     "jquery": "^3.6.0",
     "node-sass": "^7.0.1",
@@ -32,7 +34,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
