--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "my-portal",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://blanketspy99.github.io/Blanket-React",
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
@@ -13,6 +12,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.3",
     "gh-pages": "^4.0.0",
@@ -25,6 +25,7 @@
     "react-collapse": "^5.1.1",
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
+    "react-loading": "^2.0.3",
     "react-read-more-read-less": "^1.0.7",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
