--- a/manifest.json
+++ b/manifest.json
@@ -19,8 +19,13 @@
       "url": "/case-studies",
       "icons": [
         {
-          "src": "/android-chrome-192x192.png",
+          "src": "/favicon.ico",
           "sizes": "192x192",
+          "type": "image/png"
+        },
+{
+          "src": "/favicon.ico",
+          "sizes": "512x512",
           "type": "image/png"
         }
       ]
