--- a/manifest.json
+++ b/manifest.json
@@ -14,19 +14,21 @@
   "background_color": "#ffffff",
   "shortcuts": [
     {
-      "name": "Case Studies",
-      "short_name": "Case Studies",
-      "url": "/case-studies",
+      "name": "Experience",
+      "short_name": "Resume",
+      "url": "/#/experience",
       "icons": [
         {
-          "src": "/favicon.ico",
+          "src": "logo192.png",
           "sizes": "192x192",
-          "type": "image/png"
+          "type": "image/png",
+          "purpose": "any"
         },
 {
-          "src": "/favicon.ico",
+          "src": "logo512.png",
           "sizes": "512x512",
-          "type": "image/png"
+          "type": "image/png",
+          "purpose": "any"
         }
       ]
     }
