--- a/manifest.json
+++ b/manifest.json
@@ -3,9 +3,10 @@
   "name": "Blanket Resume",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "favicon.png",
       "sizes": "64x64",
-      "type": "image/x-icon"
+      "type": "image/png",
+      "purpose": "any"
     }
   ],
   "start_url": "/Blanket-React",
