--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "name": "Blanket Resume",
   "icons": [
     {
-      "src": "Assets.xcassets/AppIcon.appiconset/64.png",
+      "src": "./Assets.xcassets/AppIcon.appiconset/64.png",
       "sizes": "64x64",
       "type": "image/png",
       "purpose": "any"
@@ -20,13 +20,13 @@
       "url": "/#/experience",
       "icons": [
         {
-          "src": "Assets.xcassets/AppIcon.appiconset/192.png",
+          "src": "./Assets.xcassets/AppIcon.appiconset/192.png",
           "sizes": "192x192",
           "type": "image/png",
           "purpose": "any"
         },
 {
-          "src": "Assets.xcassets/AppIcon.appiconset/512.png",
+          "src": "./Assets.xcassets/AppIcon.appiconset/512.png",
           "sizes": "512x512",
           "type": "image/png",
           "purpose": "any"
