--- a/manifest.json
+++ b/manifest.json
@@ -1315,7 +1315,7 @@
       "sizes": "50x50"
     }
   ],
-  "name": "Blanket Resume",
+  "name": "Blanket",
   "short_name": "Blanket",
   "id": "/Blanket-React",
   "theme_color": "#000000",
