--- a/manifest.json
+++ b/manifest.json
@@ -7,12 +7,14 @@
     {
       "src": "meta/android/android-launchericon-512-512.png",
       "type": "image/png",
-      "sizes": "512x512"
+      "sizes": "512x512",
+      "purpose": "maskable"
     },
     {
       "src": "meta/android/android-launchericon-192-192.png",
       "type": "image/png",
-      "sizes": "192x192"
+      "sizes": "192x192",
+      "purpose": "maskable"
     },
     {
       "src": "meta/android/android-launchericon-144-144.png",
