--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "start_url": "/Blanket-React",
+  "start_url": "/Blanket-React/",
   "display": "standalone",
   "orientation": "portrait-primary",
   
