--- a/manifest.json
+++ b/manifest.json
@@ -1326,16 +1326,16 @@
     {
       "name": "Experience",
       "short_name": "Resume",
-      "url": "#/experience",
+      "url": "/experience",
       "icons": [
         {
-          "src": "./Assets.xcassets/AppIcon.appiconset/196.png",
-          "sizes": "196x196",
+          "src": "meta/android/android-launchericon-192-192.png",
+          "sizes": "192x192",
           "type": "image/png",
           "purpose": "any"
         },
         {
-          "src": "./Assets.xcassets/AppIcon.appiconset/512.png",
+          "src": "meta/android/android-launchericon-512-512.png",
           "sizes": "512x512",
           "type": "image/png",
           "purpose": "any"
