--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-portal",
   "version": "1.2.0",
   "private": true,
-  "homepage": "/Blanket-React",
+  "homepage": "/",
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
