--- a/package.json
+++ b/package.json
@@ -1,37 +1,31 @@
 {
-  "name": "my-portal",
-  "version": "1.2.0",
+  "name": "my-app",
+  "version": "0.1.0",
   "private": true,
-  "homepage": "/",
   "dependencies": {
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
-    "@fortawesome/fontawesome-svg-core": "^6.1.1",
-    "@fortawesome/free-solid-svg-icons": "^6.1.1",
-    "@fortawesome/react-fontawesome": "^0.2.0",
-    "@material-ui/core": "^4.12.4",
-    "@material-ui/icons": "^4.11.3",
-    "@mui/icons-material": "^5.6.2",
-    "@mui/material": "^5.7.0",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.1.1",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.10.9",
+    "@mui/material": "^5.10.13",
+    "@mui/styled-engine-sc": "^5.10.6",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^0.27.2",
-    "bootstrap": "^5.1.3",
-    "bootstrap-icons": "^1.8.3",
+    "axios": "^1.1.3",
+    "bootstrap": "^5.2.2",
     "gh-pages": "^4.0.0",
-    "html-react-parser": "^1.4.12",
-    "jquery": "^3.6.0",
-    "node-sass": "^7.0.1",
-    "popper": "^1.0.1",
-    "react": "^18.0.0",
-    "react-bootstrap": "^2.3.0",
+    "html-react-parser": "^3.0.4",
+    "jquery": "^3.6.1",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.6.0",
     "react-collapse": "^5.1.1",
-    "react-dom": "^18.0.0",
-    "react-icons": "^4.3.1",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.6.0",
     "react-read-more-read-less": "^1.0.7",
-    "react-router-dom": "^6.3.0",
+    "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "sass": "^1.56.1",
+    "styled-component": "^2.8.0",
     "web-vitals": "^2.1.4",
     "workbox-background-sync": "^6.5.3",
     "workbox-broadcast-update": "^6.5.3",
@@ -50,9 +44,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
