--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "bootstrap": "^5.2.2",
     "gh-pages": "^4.0.0",
     "html-react-parser": "^3.0.4",
+    "iframe-resizer-react": "^1.1.0",
     "jquery": "^3.6.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
     "react-collapse": "^5.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
+    "react-iframe": "^1.8.5",
     "react-read-more-read-less": "^1.0.7",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
