--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "start_url": "https://blanketspy99.github.io",
+  "start_url": "https://blanketspy99.avanverse.com",
   "display": "standalone",
   "orientation": "portrait-primary",
   
